--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <main style='width: 700px'>
             <div id="restaurant-table"></div>
             <div id="insepc-history"></div>
+            <div id="stars"></div>
         </main>
     </body>
 
