--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div id="restaurant-table"></div>
             <div id="insepc-history"></div>
             <div id="stars"></div>
+            <div id="restaurant-map"></div>
         </main>
     </body>
 
