--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <div id="restaurant-table"></div>
             <div id="insepc-history"></div>
             <div id="stars"></div>
+            <div id="menu-selection"></div>
+            <div id="restaurant-map-star-chart"></div>
+            <div id="restaurant-map-hours-stacked"></div>
+            <div id="hour-selection"></div>
             <div id="restaurant-map"></div>
         </main>
     </body>
